# QuantumEngine

./: .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  DOCKER_SETUP.md  PROJECT_SPEC.md  README.md  clickhouse_enhancement_analysis.md  clickhouse_implementation_plan.md  docker-compose.yml  docker-dev.sh  pyproject.toml  real_world_use_case.md  redis_backend.md  test_clickhouse_connection.py  test_marketplace_schema.py  test_smart_orderby.py  test_type_safety.py
.github/workflows/: main.yml  publish.yml
docker/clickhouse/: config.xml  users.xml
docs/: Makefile  changelog.rst  conf.py  requirements.txt
example_scripts/working/: README.md  advanced_features_example.py  basic_crud_example.py  clickhouse_backend_example.py  connection_management_example.py  datagrid_example.py  debug_performance.py  enhanced_create_connection_example.py  env_config_example.py  example_modular_usage.py  hybrid_schema_example.py  minimal_test.py  multi_backend_example.py  pythonic_query_example.py  query_expressions_example.py  redis_backend_example.py  relation_example.py  relationships_example.py  simple_field_test.py  sync_api_example.py  test_materialized_document_clickhouse_e2e.py  test_materialized_document_surrealdb.py  test_materialized_document_surrealdb_simple.py  test_performance_optimizations.py
src/quantumengine/: base_query.py  connection_api.py  document.py  query_expressions_pythonic.py
src/quantumorm/: __init__.py  base_query.py  connection.py  document.py
tests/: test_type_safety.py
tests/clickhouse/: test_clickhouse_connection.py  test_marketplace_schema.py  (+3 more)
(+29 files in other folders)
