[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumorm"
version = "1.0.0"
description = "Multi-Backend Object-Document Mapper (ODM) for SurrealDB, ClickHouse, and more - Quantum-powered ORM"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
    {name = "Iristech Systems"}
]
keywords = ["surrealdb", "clickhouse", "odm", "database", "async", "orm", "multi-backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "surrealdb==1.0.4",
    "clickhouse-connect>=0.7.0",
]

[project.optional-dependencies]
signals = [
    "blinker>=1.6.2",
]
jupyter = [
    "notebook==7.2.2",
]
all = [
    "blinker>=1.6.2",
    "notebook==7.2.2",
]

[project.urls]
"Homepage" = "https://github.com/iristech-systems/quantumorm"
"Bug Tracker" = "https://github.com/iristech-systems/quantumorm/issues"

[dependency-groups]
docs = [
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
